<resources>
    <string name="app_name">坏习惯</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crime_title_hint">输入一个坏习惯的标题</string>
    <string name="crime_title_label">标题</string>
    <string name="crime_details_label">详细</string>
    <string name="crime_solved_label">已解决？</string>
    <string name="crime_title">习惯</string>
    <string name="date_picker_title">记录时间</string>
    <string name="new_crime">新习惯</string>
    <string name="show_subtitle">显示标题</string>
    <string name="hide_subtitle">隐藏标题</string>
    <string name="subtitle">如果你看了什么就说什么</string>
    <string name="delete_crime">删除</string>
    <string name="crime_save">保存</string>
    <string name="take">拍摄</string>
    <string name="crime_suspect_text">选择联系人</string>
    <string name="crime_report_text">发送坏习惯报告</string>
</resources>
